<resources>
    <string name="app_name">Компост</string>

    <string name="tv_welcome">Добре дошли!</string>
    <string name="btn_skip">Пропусни</string>
    <string name="skip_dialog_title">Свързан или офлайн?</string>
    <string name="skip_dialog_body">Ако влезете с Google акаунт ще можете да персонализирате Вашата игра, като: участвате в класации, отключвате постижения, записвате прогреса си
        и споделяте Вашите резултати в социалните мрежи.\n Сигурни ли сте, че искате да пропуснете това и да продължите офлайн?</string>
    <string name="skip_dialog_negative">Назад</string>
    <string name="username_dialog_hint">Играч</string>
    <string name="username_dialog_title">Офлайн режим</string>
    <string name="username_dialog_body">Въведете своя ник:</string>
    <string name="username_dialog_positive">Готово</string>
    <string name="username_dialog_negative">Отказ</string>
    <string name="signin_other_error">Unable to Sign in</string>

    <string name="tvHello">Здравейте,</string>
    <string name="menuNewGame">Нова игра</string>
    <string name="menuLeaderBoard">Класация</string>
    <string name="menuAchievements">Постижения</string>
    <string name="menuAboutUs">Информация</string>

    <string name="achievements_not_available">Моля влезте в акаунта си, за да видите постиженията.</string>
    <string name="leaderboards_not_available">Моля влезте в акаунта си, за да видите класиранията.</string>

    <string name="about_us_text">Atanas Bozhkov\nF54630</string>

    <string name="database_created">com.asbozh.startactivity.database_created</string>
    <string name="database_version">com.asbozh.startactivity.database_version</string>

    <string name="saved_first_time">com.asbozh.mainactivity.saved_first_time</string>
    <string name="saved_nickname">com.asbozh.mainactivity.saved_nickname</string>
    <string name="saved_local_nickname">com.asbozh.mainactivity.saved_local_nickname</string>
    <string name="saved_is_offline">com.asbozh.mainactivity.saved_is_offline</string>
    <string name="button_sign_out">Излез</string>

    <string name="exit_dialog_body">Искате ли да прекратите теста?</string>
    <string name="exit_dialog_positive">Да</string>
    <string name="exit_dialog_negative">Не</string>

    <string name="achievement_funny_toast_text">Отключихте постижението \"Забавен\" (0 верни отговори)!</string>
    <string name="achievement_nerd_toast_text">Отключихте постижението \"Зубър\" (Оценка: Отличен)!</string>
    <string name="achievement_genius_toast_text">Отключихте постижението \"Гений\" (Матура без грешка)!</string>
    <string name="uploading_offline_progress">Синхронизиране..</string>
    <string name="choose_subject">Изберете матура</string>
    <string name="subject_geo">География</string>
    <string name="subject_his">История</string>
    <string name="subject_bio">Биология</string>
    <string name="subject_phi">Философия</string>

</resources>
